[package]
name = "new_relic_log_tester"
version = "0.1.0"
edition = "2021"
description = "Rust application that allows you to input your New Relic Ingestion API Key and send log messages to the New Relic Log API (US only)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle]
name = "new_relic_log_tester"
identifier = "amarden.new_relic_log_tester"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

